syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1.report.table.tables;


option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/report/table/tables;tables";
option java_outer_classname = "PRTTC";

message Codes {
  message Row {
    message Cell {
      int64 count = 1;
      double percent = 2;
    }

    string case_name = 1;
    repeated Cell cells = 2;
  }

  string name = 1;
  repeated string column_names = 2;
  repeated Row rows = 3;
}
